  not be configured to be 'false'.
- Fixed bugs in which ad_gpo_map_interactive, ad_gpo_map_remote_interactive,
  ad_gpo_map_network, ad_gpo_map_batch, ad_gpo_map_service, ad_gpo_map_permit
  and ad_gpo_map_deny settings for the AD provider were incorrectly formatted.
- Fixed a bug in which the dyndns_iface setting for the AD provider was not
  set from sssd::provider::ad::dyndns_ifaces.

* Fri Jul 13 2018 Adam Yohrling <adam.yohrling@onyxpoint.com> - 6.1.3-0
- Added ldap_use_tokengroups, ldap_group_objectsid, ldap_user_objectsid to sssd::provider::ad
- Updated required version of puppetlabs-stdlib to 4.19.0 since fact function is used

* Tue Jun 19 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.1.2-0
- Avoid changing the permissions from the vendored RPM
  - /etc/sssd/ owner is no longer managed
  - /etc/sssd/ perms went from 0640 to 0711
  - /etc/init.d/sssd went from 0754 to 0755 on EL6
- Update version range of auditd dependency in metadata.json
- Cleanup requires in metadata.json
- Cleanup unneeded fixtures and update CI assets

* Wed Mar 28 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.1.1-0
- sssd::provider::ad::ldap_schema should be a string, not a boolean
- AD test cleanup

* Wed Mar 14 2018 Philippe Muller <philippe.muller@gmail.com> - 6.1.0-0
- Allow passing ldap_tls_cacert to sssd::provider::ldap

* Wed Feb 28 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.1.0-0
- Some template and concat changes to make debugging the module easier
  - Add headers to more easily diagnose where to stick params
  - Order the concat sections
- Add some missing params from sssd::provider::ad
  - default_shell
  - dyndns_update
  - fallback_homedir
  - krb5_realm
  - krb5_store_password_if_offline
  - ldap_schema

* Fri Jan 19 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.0-0
- Added sssd class option to automatically configure SSSD for an IPA
  domain, when the host is joined to an IPA domain.

* Fri Dec 15 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.0-0