@@ -11,12 +11,16 @@ include BeakerWindows::Powershell
 include BeakerWindows::Registry
 include BeakerWindows::WindowsFeature
 
-if ENV['PUPPET_VERSION']
-  # have to tell run_puppet_install_helper the version of
-  # puppet-agent that corresponds to PUPPET_VERSION
-  ENV['PUPPET_INSTALL_VERSION'] = latest_puppet_agent_version_for(ENV['PUPPET_VERSION'])
+unless ENV['BEAKER_provision'] == 'no'
+  hosts.each do |host|
+    # Install Puppet
+    if host.is_pe?
+      install_pe
+    else
+      install_puppet
+    end
+  end
 end
-run_puppet_install_helper
 
 hosts.each do |host|
   # https://petersouter.co.uk/testing-windows-puppet-with-beaker/
